# solquests

./: README.md  crowdsource
JSCrypto/solcurrency/: package-lock.json  package.json
JSCrypto/solcurrency/src/: App.js
airdrop/: index.js
burnNFT/: package.json
burnNFT/distributetoken/: package-lock.json  package.json
burnNFT/distributetoken/src/: App.js  index.js
burnNFT/distributetoken/src/utils/: nftCreation.js  programIds.js
calc/calcdapp/: Anchor.toml
calc/calcdapp/programs/calcdapp/: Cargo.toml
calc/calcdapp/programs/calcdapp/src/: lib.rs
calc/calcdapp/tests/: calcdapp.ts
crypto_solana_cli/: writeup.md
deploying/: Cargo.toml
deploying/src/: lib.rs
mail-dapp/: Cargo.toml
mail-dapp/app/src/store/reducers/: accountReducer.js
mail-dapp/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
msgapp/msgapp/: Anchor.toml
msgapp/msgapp/programs/msgapp/: Cargo.toml
msgapp/msgapp/programs/msgapp/src/: lib.rs
msgapp/msgapp/tests/: msgapp.ts
mymoneydapp/: Anchor.toml
mymoneydapp/programs/mymoneydapp/: Cargo.toml
mymoneydapp/programs/mymoneydapp/src/: lib.rs
mymoneydapp/tests/: mymoneydapp.js
roulette/: helper.js  index.js  package.json  solana.js
sendmoney/: index.js  package.json
stakesol/: package-lock.json  package.json
stakesol/src/: App.js
verif/verif/: Anchor.toml
verif/verif/programs/verif/: Cargo.toml
verif/verif/programs/verif/src/: lib.rs
verif/verif/tests/: verif.ts
wallet/: README.md
wallet/cmd/: createWallet.go  importWallet.go  requestAirdrop.go  root.go  transfer.go  utils.go
