cargo-features = ["edition2021"]

[package]
name = "deploying"
version = "0.1.0"
edition = "2021"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.10"

[dev-dependencies]
solana-program-test = "=1.7.10"
solana-sdk = "=1.7.10"

[lib]
name = "crowdsource"
crate-type = ["cdylib", "lib"]
